--- a/ProjektP4/Views/Pages/EmployeesListPageView.axaml
+++ b/ProjektP4/Views/Pages/EmployeesListPageView.axaml
@@ -3,69 +3,53 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:views="clr-namespace:ProjektP4.Views"
-             d:DesignHeight="450"
-             d:DesignWidth="800"
-             x:CompileBindings="True"
-             x:DataType="views:EmployeesListPageView"
-             mc:Ignorable="d">
+             xmlns:views="clr-namespace:ProjektP4.Views" d:DesignHeight="450" d:DesignWidth="800"
+             x:CompileBindings="True" x:DataType="views:EmployeesListPageView" mc:Ignorable="d">
     <Design.DataContext>
         <views:EmployeesListPageView />
     </Design.DataContext>
-    <StackPanel>
-        <Grid ColumnDefinitions="150,150,100,100"
-              RowDefinitions="Auto"
-              Margin="4">
-            <TextBlock Grid.Column="0" Text="First name"/>
-            <TextBlock Grid.Column="1" Text="Last name"/>
-            <TextBlock Grid.Column="2" Text="Position"/>
-            <TextBlock Grid.Column="3" Text="Options"/>
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top">
+        <TextBlock Text="Employees list" FontSize="24" FontWeight="Bold" Margin="0,20,0,20" />
+        <Grid ColumnDefinitions="150,150,150,100" RowDefinitions="Auto" Margin="4" Name="EmployeeListColumnTitles">
+            <Line Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0"></Line>
+            <TextBlock Grid.Column="0" Text="First name" FontSize="16" FontWeight="SemiBold"
+                       HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <TextBlock Grid.Column="1" Text="Last name" FontSize="16" FontWeight="SemiBold"
+                       HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <TextBlock Grid.Column="2" Text="Position" FontSize="16" FontWeight="SemiBold" HorizontalAlignment="Center"
+                       VerticalAlignment="Center" />
+            <TextBlock Grid.Column="3" Text="Options" FontSize="16" FontWeight="SemiBold" HorizontalAlignment="Center"
+                       VerticalAlignment="Center" />
         </Grid>
-        <ItemsControl ItemsSource="{Binding _employees}">
+        <ItemsControl ItemsSource="{Binding _employees}" Name="EmployeesListItemControl">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Grid ColumnDefinitions="150,150,100,100"
-                          RowDefinitions="Auto"
-                          Margin="4">
-                        <TextBlock Grid.Column="0" Text="{Binding FirstName}"/>
-                        <TextBlock Grid.Column="1" Text="{Binding LastName}"/>
-                        <TextBlock Grid.Column="2" Text="{Binding Position}"/>
-                        <Button Grid.Column="3"
-                                Tag="{Binding EmployeeId}"
-                                Click="DeleteEmployee_Click">
+                    <Grid ColumnDefinitions="150,150,150,100" RowDefinitions="Auto" Margin="4">
+                        <TextBlock Grid.Column="0" Margin="4" Text="{Binding FirstName}" HorizontalAlignment="Center"
+                                   VerticalAlignment="Center" />
+                        <TextBlock Grid.Column="1" Margin="4" Text="{Binding LastName}" HorizontalAlignment="Center"
+                                   VerticalAlignment="Center" />
+                        <TextBlock Grid.Column="2" Margin="4" Text="{Binding Position}" HorizontalAlignment="Center"
+                                   VerticalAlignment="Center" />
+                        <Button Grid.Column="3" Margin="4" Tag="{Binding EmployeeId}" Click="DeleteEmployee_Click"
+                                Name="Delete">
                             Delete
                         </Button>
                     </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-        <Grid ColumnDefinitions="150,150,150,100"
-              RowDefinitions="Auto"
-              Margin="4">
-            <TextBlock Grid.Row="0"
-                       Text="Add employee">
-            </TextBlock>
-            <TextBox Grid.Column="0"
-                     Grid.Row="1"
-                     Width="150"
-                     MaxLength="20"
-                     x:Name="_employeeToAddFirstName"/>
-            <TextBox Grid.Column="0"
-                     Grid.Row="1"
-                     Width="150"
-                     MaxLength="20"
-                     x:Name="_employeeToAddLastName"/>
-            <TextBox Grid.Column="0"
-                     Grid.Row="1"
-                     Width="150"
-                     MaxLength="20"
-                     x:Name="_employeeToAddPosition"/>
-            <Button Grid.Column="2"
-                    Grid.Row="0"
-                    Click="AddEmployee_Click">
+        <Grid ColumnDefinitions="150,150,150,100" RowDefinitions="Auto" Margin="4">
+            <TextBlock Grid.Row="0" Text="Add employee" FontSize="16" FontWeight="SemiBold"
+                       HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <TextBox Grid.Column="0" Margin="4" Grid.Row="1" Width="142" MaxLength="20"
+                     x:Name="_employeeToAddFirstName" />
+            <TextBox Grid.Column="1" Margin="4" Grid.Row="1" Width="142" MaxLength="20" x:Name="_employeeToAddLastName" />
+            <TextBox Grid.Column="2" Margin="4" Grid.Row="1" Width="142" MaxLength="20" x:Name="_employeeToAddPosition" />
+            <Button Grid.Column="3" Margin="4" Grid.Row="1" Click="AddEmployee_Click" Name="Submit"
+                    IsEnabled="{Binding Path=IsSubmitEnabled, Mode=OneWay}">
                 Submit
             </Button>
         </Grid>
     </StackPanel>
-    
 </UserControl>
